  (Mark Miller)

* SOLR-15111: Use JDK8 Base64 instead of own implementation (Andras Salamon via janhoy)

* SOLR-15612: Remove unecessary https8 jetty module (Houston Putman)

* SOLR-15606: Rename (deprecated) Insanity.java to NumericHidingLeafReader.java adjusting callers to match. (Christine Poerschke)

Bug Fixes
---------------------
* SOLR-14546: Fix for a relatively hard to hit issue in OverseerTaskProcessor that could lead to out of order execution
  of Collection API tasks competing for a lock (Ilan Ginzburg).

* SOLR-15162: Allow readOnly parameter to be used with v2 modify collection command (Eric Pugh)

* SOLR-15317: Correctly handle user principals with whitespace in PKIAuthPlugin (Dominik Dresel, Mike Drob)

* SOLR-15334: Return error response when failing auth in PKIAuthPlugin (Mike Drob)

* SOLR-15449: Edismax sow incorrectly affect mm parameter in multi field search (Alessandro Benedetti, Michael Gibney, David Smiley)

* SOLR-15410: Always use -Xverbosegclog for OpenJ9.  (Colvin Cowie via Eric Pugh)

* SOLR-15628: The SolrException.log() helper method has been fixed to correctly passes the Throwable to the Logger w/o stringification (hossman)

==================  8.10.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------
* SOLR-15472: New shards.preference option for preferring replicas based on their leader status, i.e.
  `shards.preference=replica.leader:false` would prefer non-leader replicas. (wei wang via Timothy Potter)

* SOLR-15208: Add the countDist aggregation to the stats, facet and timeseries Streaming Expressions (Joel Bernstein)

* SOLR-15277: Schema Designer UI (Timothy Potter, Kiran Chitturi)

* SOLR-15527: Security screen in Admin UI for managing users, roles, and permissions (Timothy Potter)

* SOLR-15089: Allow backup/restoration to Amazon's S3 blobstore (Andy Throgmorton, Houston Putman, Jason Gerlowski, Pierre Salagnac, Mike Drob)
